# service-user-balance

./: .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  TECH_TASK.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
migrations/versions/: 2025-10-24_initial_migration_with_current_models.py
src/app/: __main__.py  application.py  models.py  schemas.py  settings.py  types.py  utils.py
src/app/api/: base.py  health.py  transactions.py  users.py
src/app/db/: resource.py
src/app/repositories/: __init__.py  payment.py  transaction.py  user.py
src/app/services/: idempotency_service.py  transaction_service.py  user_service.py
tests/: conftest.py
tests/integration/: conftest.py  test_api_integration.py  test_concurrent_transactions.py  test_database_integration.py  test_workflows.py
tests/unit/: test_schemas.py  test_utils.py
tests/unit/api/: test_transactions.py  test_users.py
tests/unit/repositories/: test_transaction_repository.py  test_user_repository.py
tests/unit/services/: test_idempotency_service.py  test_transaction_service.py  test_user_service.py
